# Programming-HPC

./: .gitignore  PythonTest.ipynb  README.md  SessionRecordings.txt  packages.txt
Advanced Programming/SYCL/: scalar_add_bufacc.cpp  scalar_add_usm.cpp  ~$SYCL-ACC.pptx
Advanced Programming/SYCL Programming_30_10_2025(Advanced Programming in HPC)/: buffacc_sycl.cpp  data_parallel_ndrange.cpp  data_parallel_range.cpp  device_query.cpp  devicequery.cpp  matrixmul_sycl_buffacc.cpp  pical.cpp  slurm.sh  vecadd_buffacc_sycl.cpp  vectoradd_sycl_usm.cpp
Assignments/: CUDAassignmentDay01.txt  MPI_Assignment.txt  OpenMP_assignment.txt  PythonPart2 G Assignments_09Oct2025.docx
C++/Day1/: cls_demo.cpp  var_scope  var_scope.cpp
C++/Day2/: defaul_func_args.cpp  diamond_with_cons.cpp  functions.cpp
C++/Day3/: obj_relations.cpp  poly.cpp
C++PP/OpenMPTest/: CMakeLists.txt  main.cpp
Day2/: cons_des.cpp  function_overload.cpp  function_overriding.cpp  inheritance.cpp  psv_psr.cpp
ML/: Assignment.html  Assignment.ipynb  Assignment_1.ipynb  CatBoost.ipynb  Decision_Tree.ipynb  EnsembleLearning.ipynb  MLDay1.ipynb  MLDay2.ipynb  MLDay3.ipynb  MLDay4.ipynb  MLDay5.ipynb  MLDay6.ipynb  Naive_Bayes.ipynb  RandomForest.ipynb  Test.ipynb
MyWebApp/: app.py  products.db
Practice/: class.py  dataStruct.ipynb  function.py  main.py
Python/: Advance_Libraries_SourceCode.ipynb  Assignment.ipynb  Day2_PPP.ipynb  data.csv  sales_data.csv  test.py
PythonPP/: Day2_7Oct2025.ipynb  Multiprocessing_01.py
Stats/: Test.ipynb  numpy.ipynb  pandas-exercises.ipynb  pandas.ipynb  stats.ipynb
(+229 files in other folders)
